Fix obtener usuario administrador
